# rapp_beginner_tutorials

./: README.md
cpp/: .README.md.swp  README.md  README_old.md
cpp/Aldebaran_NAO/qibuild/helloworld/: CMakeLists.txt
cpp/Getting_started/available_services/: CMakeLists.txt
cpp/Speech/speech_recognition_google/: CMakeLists.txt
cpp/Speech/speech_recognition_sphinx4/: CMakeLists.txt
cpp/Vision/human_detect/: CMakeLists.txt
cpp/Vision/qr_detect/: CMakeLists.txt
cpp/aldebaran_nao/: README.md
cpp/aldebaran_nao/cmake/face_detection/: CMakeLists.txt  README.md
cpp/aldebaran_nao/cmake/helloworld/: README.md
cpp/aldebaran_nao/cmake/helloworld_static/: README.md
cpp/aldebaran_nao/cmake/say_services/: CMakeLists.txt  README.md
cpp/aldebaran_nao/qibuild/: README.md
cpp/aldebaran_nao/qibuild/facedetection/: README.md
cpp/aldebaran_nao/qibuild/helloworld/: README.md
cpp/available_services/: available_services.md
cpp/batch/: README.md
cpp/class_reactor/: CMakeLists.txt
cpp/config/: CMakeLists.txt
cpp/email_handling/: CMakeLists.txt
cpp/examples/: getting_started.md
cpp/examples/available_services/: CMakeLists.txt
cpp/examples/cognitive_games/: CMakeLists.txt
cpp/examples/face_detect/: CMakeLists.txt
cpp/examples/geolocation/: CMakeLists.txt
cpp/examples/hazard_detect/: CMakeLists.txt
cpp/examples/light_detection/: CMakeLists.txt
cpp/examples/path_planning/: CMakeLists.txt
cpp/examples/picture_handling/: CMakeLists.txt
cpp/examples/set_noise_profile/: CMakeLists.txt
cpp/examples/weather/: CMakeLists.txt
cpp/getting_started/: README.md  ]
cpp/getting_started/batch/: CMakeLists.txt  README.md
cpp/getting_started/callbacks/: README.md
cpp/getting_started/class_reactor/: CMakeLists.txt  README.md
cpp/getting_started/cloud_call/: CMakeLists.txt  README.md
cpp/getting_started/loop/: CMakeLists.txt  README.md
cpp/getting_started/platform_info/: CMakeLists.txt  README.md
cpp/getting_started/platform_info/source/: config.cpp
cpp/helloworld/: CMakeLists.txt  README.md
cpp/helloworld/source/: helloworld.cpp
cpp/helloworld_static/: CMakeLists.txt  README.md
cpp/helloworld_static/source/: helloworld.cpp
cpp/knowrob_ontology/: CMakeLists.txt
cpp/loop/: CMakeLists.txt  README.md
cpp/news/: CMakeLists.txt
cpp/object_recognition/: CMakeLists.txt
cpp/speech/: README.md
cpp/speech/set_noise_profile/: CMakeLists.txt  README.md
cpp/speech/speech_recognition_google/: CMakeLists.txt  README.md
cpp/speech/speech_recognition_google/source/: speech_recognition_google.cpp
cpp/speech/speech_recognition_sphinx4/: CMakeLists.txt  README.md
cpp/speech/speech_recognition_sphinx4/source/: speech_recognition_sphinx4.cpp
cpp/speech/text_to_speech/: CMakeLists.txt  README.md
cpp/speech_to_text/: CMakeLists.txt
cpp/vision/: README.md
cpp/vision/face_detect/: README.md
cpp/vision/human_detect/: CMakeLists.txt  README.md
cpp/vision/object_recognition/: CMakeLists.txt  README.md
cpp/vision/qr_recognition/: CMakeLists.txt  README.md
cpp/vision/qr_recognition/source/: qr_recognition.cpp
